--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -7,15 +7,21 @@
 {%endblock%}
 
 {% block body%}
-<nav class="navbar navbr-fixed-top">
-    <a class="navbar-brand" href="{{url_for('home')}}" style="color: blanchedalmond;">TASK MANAGER</a>
-    <div class="navbar-nav mr-auto"></div>
-    {% if current_user.is_authenticated %}
-    <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-    <a class="nav-item nav-link" href="{{ url_for('post') }}">Add Task</a>
-    {% endif %}
+<nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="{{url_for('home')}}">
+    <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
+    Task Manager
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarcollapse">
+      <div class="navbar-nav mr-2">
+        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+        <a class="nav-link" href="{{ url_for('post') }}">Add Task</a>
+      </div>
     </div>
-</nav>
+  </nav>
 <div class="container" style="margin-top: 8rem;">
     <div class="row d-flex justify-content-center">
         <div class="col-lg-6 col-md-6">
@@ -44,14 +50,12 @@
                             <td>{{task.date_created.date()}}</td>
                             <td>
                                 <a class="btn btn-primary" data-toggle="modal" 
-                                data-target="#out{{task.id}}">Update</a>
+                                href="/update/{{task.id}}">Update</a>
                             </td>
                             <td>
                                 <a class="btn btn-danger" style="margin-right: 10px;"
                                     href="/delete/{{task.id}}">Delete</a>
                             </td>
-                            
-                            
                             {%endif%}
                         </tr>
                         {%endfor%}
