--- a/Todo/templates/post.html
+++ b/Todo/templates/post.html
@@ -8,14 +8,13 @@
 
 {% block body%}
 <div class="container">
-    <div class="row">
-        <div class="col-md">
-            <form method="POST" action="">
+    <div class="row d-flex justify-content-center">
+        <div class="col-lg-6 col-md-6">
+            <form method="POST">
                 {{form.csfr_token}}
                 <div class="form-group">
                         {{form.content.label(class="form-control-label")}}
-                    </h2>
-                        {{form.content(class="form-control")}}
+                        {{form.content(class="form-control")}}    
                 </div>
                 <div class="form-group">
                     {{form.submit(class="btn btn-primary")}}
