--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -7,7 +7,7 @@
 {%endblock%}
 
 {% block body%}
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="{{url_for('home')}}">
     <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
     Task Manager
@@ -16,7 +16,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarcollapse">
-      <div class="navbar-nav mr-2">
+      <div class="navbar-nav">
         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
         <a class="nav-link" href="{{ url_for('post') }}">Add Task</a>
       </div>
