--- a/Todo/templates/base.html
+++ b/Todo/templates/base.html
@@ -16,13 +16,13 @@
     {%block head%}{%endblock%}
   </head>
   <body>
-          <div class="row justify-content-center">
+          <div class="row">
             <div class="col-lg-12">
               {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
                 {% for category, message in messages %}
-                  <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
+                  <div class="alert alert-{{ category }}" role="alert">
+                    <span>{{ message }}</span>
                     <button type="button" class="close" data-dismiss="alert">×</button>
                   </div>
                 {% endfor %}
