--- a/Todo/templates/base.html
+++ b/Todo/templates/base.html
@@ -12,13 +12,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
 
-
-    {%block head%}{%endblock%}
+    {%block head%}
+    {%endblock%}
   </head>
   <body>
-          <div class="row">
-            <div class="col-lg-12">
-              {% with messages = get_flashed_messages(with_categories=true) %}
+    {% block nav%}
+    {%endblock%}
+    <div class="container">
+      <div class="row m-5 d-flex justify-content-center">
+        <div class="col-lg-6">
+          {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
                 {% for category, message in messages %}
                   <div class="alert alert-{{ category }}" role="alert">
@@ -28,10 +31,11 @@
                 {% endfor %}
               {% endif %}
             {% endwith %}
-          </div>
-            </div>
-        {%block body%}{%endblock%}
-    
+            {%block body%}
+            {%endblock%}
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -40,4 +44,3 @@
     <script src="https://kit.fontawesome.com/df3dd688b8.js" crossorigin="anonymous"></script>
   </body>
 </html>
-
