--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -1,70 +1,65 @@
 {% extends 'base.html' %}
-
 {% block head%}
 <title>
     Todo
 </title>
 {%endblock%}
 
-{% block body%}
-<nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="{{url_for('home')}}">
-    <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
-    Task Manager
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarcollapse">
-      <div class="navbar-nav">
-        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-        <a class="nav-link" href="{{ url_for('post') }}">Add Task</a>
-      </div>
-    </div>
-  </nav>
-<div class="container" style="margin-top: 8rem;">
-    <div class="row d-flex justify-content-center">
-        <div class="col-lg-6 col-md-6">
-            {% if tasks == []%}
-            <div class="alert alert-warning" role="alert">
-                No Tasks available
-            </div>
-            {%else%}
-            <div class="table-responsive-md">
-                <table class="table table-borderless" style="background-color: white;">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Task</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">Update</th>
-                            <th scope="col">Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {%for task in tasks%}
-                        <tr>
-                            {%if task.author==current_user%}
-                            <td>{{task.id}}</td>
-                            <td>{{task.content}}</td>
-                            <td>{{task.date_created.date()}}</td>
-                            <td>
-                                <a class="btn btn-primary"
-                                href="/update/{{task.id}}">Update</a>
-                            </td>
-                            <td>
-                                <a class="btn btn-danger" style="margin-right: 10px;"
-                                    href="/delete/{{task.id}}">Delete</a>
-                            </td>
-                            {%endif%}
-                        </tr>
-                        {%endfor%}
-                    </tbody>
-                </table>
-                {%endif%}
-            </div>
+{% block nav%}
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="{{url_for('home')}}">
+        <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
+        Task Manager
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarcollapse">
+          <div class="navbar-nav">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link" href="{{ url_for('post') }}">Add Task</a>
+          </div>
         </div>
-    </div>
-</div>
+      </nav>
+    {%endblock%}
 
+  {% block body%}
+  {% if tasks == []%}
+  <div class="alert alert-warning" role="alert">
+      No Tasks available
+  </div>
+  {%else%}
+  <div class="table-responsive-md">
+      <table class="table table-borderless" style="background-color: white;">
+          <thead>
+              <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Task</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Update</th>
+                  <th scope="col">Delete</th>
+              </tr>
+          </thead>
+          <tbody>
+              {%for task in tasks%}
+              <tr>
+                  {%if task.author==current_user%}
+                  <td>{{task.id}}</td>
+                  <td>{{task.content}}</td>
+                  <td>{{task.date_created.date()}}</td>
+                  <td>
+                      <a class="btn btn-primary"
+                      href="/update/{{task.id}}">Update</a>
+                  </td>
+                  <td>
+                      <a class="btn btn-danger" style="margin-right: 10px;"
+                          href="/delete/{{task.id}}">Delete</a>
+                  </td>
+                  {%endif%}
+              </tr>
+              {%endfor%}
+          </tbody>
+      </table>
+      {%endif%}
+  </div>
 {%endblock%}
