--- a/Todo/templates/login.html
+++ b/Todo/templates/login.html
@@ -1,43 +1,38 @@
-{%extends 'base.html'%} {% block head%}
+{%extends 'base.html'%}
+{% block head%}
 <title>Login</title>
-{%endblock%} {% block body%}
-<div class="container">
-  <div class="row d-flex justify-content-center">
-    <div class="col-lg-6 ">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">
-            LOGIN
-          </h4>
-          <form method="POST" action="">
-            {{form.csfr_token}}
-            <div class="form-group">
-              {{form.email.label(class="form-control-label")}} {% if
-              form.email.errors %} {{form.email(class="form-control is-invalid")}}
-              <div class="invalid-feedback">
-                {% for error in form.email.errors %}
-                <span>{{error}}</span>
-                {% endfor %}
-              </div>
-              {% else %} {{form.email(class="form-control", type='text')}} {% endif %}
-            </div>
-            <div class="form-group">
-              {{form.password.label(class="form-control-label")}} {% if
-              form.password.errors %} {{form.password(class="form-control
-              is-invalid")}}
-              <div class="invalid-feedback">
-                {% for error in form.password.errors %}
-                <span>{{error}}</span>
-                {% endfor %}
-              </div>
-              {% else %} {{form.password(class="form-control",type='password')}} {% endif %}
-            </div>
-            <div class="form-group">{{form.submit(class="btn btn-primary-outline")}}</div>
-          </form>
+{%endblock%} 
+{% block body%}
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">
+      LOGIN
+    </h4>
+    <form method="POST" action="">
+      {{form.csfr_token}}
+      <div class="form-group">
+        {{form.email.label(class="form-control-label")}} {% if
+        form.email.errors %} {{form.email(class="form-control is-invalid")}}
+        <div class="invalid-feedback">
+          {% for error in form.email.errors %}
+          <span>{{error}}</span>
+          {% endfor %}
         </div>
+        {% else %} {{form.email(class="form-control", type='text')}} {% endif %}
       </div>
-    </div>
-    
+      <div class="form-group">
+        {{form.password.label(class="form-control-label")}} {% if
+        form.password.errors %} {{form.password(class="form-control
+        is-invalid")}}
+        <div class="invalid-feedback">
+          {% for error in form.password.errors %}
+          <span>{{error}}</span>
+          {% endfor %}
+        </div>
+        {% else %} {{form.password(class="form-control",type='password')}} {% endif %}
+      </div>
+      <div class="form-group">{{form.submit(class="btn btn-primary-outline")}}</div>
+    </form>
   </div>
 </div>
 {%endblock%}
