--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -6,21 +6,32 @@
 {%endblock%}
 
 {% block nav%}
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="{{url_for('home')}}">
-        <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
-        Task Manager
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarcollapse">
-          <div class="navbar-nav">
-            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            <a class="nav-link" href="{{ url_for('post') }}">Add Task</a>
-          </div>
-        </div>
-      </nav>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{url_for('home')}}">
+      <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
+      Todo
+    </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="{{ url_for('post') }}">Add Task</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Welcome! {{current_user.username.capitalize()}}
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     {%endblock%}
 
   {% block body%}
@@ -30,7 +41,7 @@
   </div>
   {%else%}
   <div class="table-responsive-md">
-      <table class="table table-borderless" style="background-color: white;">
+      <table class="table table-borderless">
           <thead>
               <tr>
                   <th scope="col">#</th>
