--- a/Todo/static/style.css
+++ b/Todo/static/style.css
@@ -1,11 +1,11 @@
 body{
     font-family: 'Roboto', sans-serif;
     font-size: medium;
-    background: #222D32;
+    background-color:aliceblue;
 
 }
 input[type='text'] {  
-    background-color: #1A2226;
+    
     border: none;
     border-bottom: 2px solid #0DB8DE;
     border-top: 0px;
@@ -13,10 +13,9 @@ input[type='text'] {
     outline: 0;
     margin-bottom: 20px;
     padding-left: 0px;
-    color: #ECF0F5;
+    
 }
 input[type='password'] {  
-    background-color: #1A2226;
     border: none;
     border-bottom: 2px solid #0DB8DE;
     border-top: 0px;
@@ -24,7 +23,6 @@ input[type='password'] {
     outline: 0;
     margin-bottom: 20px;
     padding-left: 0px;
-    color: #ECF0F5;
 }
 .form-group {
     margin-bottom: 40px;
@@ -37,8 +35,6 @@ input[type='password'] {
     box-shadow: none;
     border-bottom: 2px solid #0DB8DE;
     outline: 0;
-    background-color: #1A2226;
-    color: #ECF0F5;
 }
 
 input:focus {
@@ -52,7 +48,6 @@ input:focus {
     letter-spacing: 2px;
     margin-top: 15px;
     font-weight: bold;
-    color: #ECF0F5;
 }
 .card-img-top{
     height: 100px;
@@ -66,7 +61,6 @@ input:focus {
 .card{
     margin-top: 75px;
     height: auto;
-    background: #1A2226;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 label {
@@ -81,7 +75,7 @@ label {
 }
 
 .navbar{
-    background-color:#41729F;
+    background-color:#7D8DD0;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .btn-primary-outline{
@@ -99,14 +93,4 @@ label {
 input[type=checkbox]:checked + label.form-check-label{
     text-decoration: line-through;
   }
-.navbar-brand{
-    color: #ECF0F5;
-}
-.navbar-brand:hover{
-    color: #ECF0F5;
-}
-.nav-link{
-    color:black;
-}
-.nav-link:hover{
-    color:black;
+
