--- a/Todo/templates/login.html
+++ b/Todo/templates/login.html
@@ -31,8 +31,11 @@
         </div>
         {% else %} {{form.password(class="form-control",type='password')}} {% endif %}
       </div>
-      <div class="form-group">{{form.submit(class="btn btn-primary-outline")}}</div>
+      <div class="form-group text-center">{{form.submit(class="btn btn-primary-outline")}}</div>
     </form>
   </div>
+  <div class="form-group mb-0">
+    <p class="text-center text-muted">Need An Account? <a href="{{url_for('signup')}}" id="signup">Sign Up Now</a></p>
+ </div>
 </div>
 {%endblock%}
