--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -8,7 +8,7 @@
 {% block nav%}
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{url_for('home')}}">
+      <a class="navbar-brand" href="{{url_for('main.home')}}">
       <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
       Todo
     </a>
@@ -18,14 +18,14 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="{{ url_for('post') }}">Add Task</a>
+            <a class="nav-link active" href="{{ url_for('todos.post') }}">Add Task</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Welcome! {{current_user.username.capitalize()}}
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{{ url_for('logout')}}">Logout</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('users.logout')}}">Logout</a></li>
             </ul>
           </li>
         </ul>
