--- a/Todo/templates/login.html
+++ b/Todo/templates/login.html
@@ -42,7 +42,7 @@
     </form>
   </div>
   <div class="form-group mb-0">
-    <p class="text-center text-muted">Need An Account? <a href="{{url_for('signup')}}" id="signup">Sign Up Now</a></p>
+    <p class="text-center text-muted">Need An Account? <a href="{{url_for('users.signup')}}" id="signup">Sign Up Now</a></p>
  </div>
 </div>
 {%endblock%}
