--- a/Todo/templates/base.html
+++ b/Todo/templates/base.html
@@ -50,10 +50,10 @@
         </div>
       </div>
     </div>
-    <script>
+    <!-- <script>
       $(document).ready(function(){
         setTimeout(function() { $("#alert-class").hide(); }, 2000)
       });
-          </script>
+          </script> -->
   </body>
 </html>
